--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
    >
 
     <TextView
+        android:id="@+id/tv01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Main"/>
